# parquet2json

./: Dockerfile  README.md  pyproject.toml
src/parquet2json/: cli.py  converter.py  elasticsearch.py  utils.py
