[project]
name = "parquet2json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.8.2",
    "typer>=0.12.5",
]

[project.scripts]
parquet2json = "parquet2json.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
