[project]
name = "parquet2json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensearch-dsl>=2.1.0",
    "polars>=1.9.0",
    "pyarrow>=17.0.0",
    "typer>=0.12.5",
]

[project.scripts]
parquet2json = "parquet2json.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
