[project]
name = "parquet2json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.10.7",
    "polars>=1.9.0",
    "pyarrow>=17.0.0",
    "smart-open[gcs]>=7.0.5",
    "typer>=0.12.5",
]

[project.scripts]
parquet2json = "parquet2json.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
